# ssc

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  coverage.yml  release.yml
code_attic/: Heliostat_AzElAod.cpp  atmospheric_aod.cpp  atmospheric_aod.h  cmod_annualoutput.cpp  cmod_cb_mspt_system_costs.cpp  cmod_csp_common_eqns.cpp  cmod_csp_common_eqns.h  cmod_csp_tower_eqns.cpp  cmod_csp_tower_eqns.h  cmod_csp_trough_eqns.cpp  cmod_csp_trough_eqns.h  cmod_dsg_flux_preprocess.cpp  cmod_fossilgen.cpp  cmod_ippppa.cpp  cmod_iscc_design_point.cpp  cmod_poacalib.cpp  cmod_pvwattsv0.cpp  cmod_pvwattsv1.cpp  cmod_pvwattsv1_1ts.cpp  cmod_pvwattsv1_poa.cpp  cmod_tcsdirect_steam.cpp  cmod_tcsdish.cpp  cmod_tcsiscc.cpp  cmod_tcsmslf.cpp  cmod_tcstrough_physical.cpp  cmod_tcstrough_physical_csp_solver.cpp  cmod_trough_physical_iph_old.cpp  cmod_ui_tes_calcs.cpp  cmod_utilityrate.cpp  cmod_utilityrate2.cpp  cmod_utilityrate3.cpp  cmod_utilityrate4.cpp  csp_solver_tou_block_schedules.h  direct_steam_receivers.cpp  direct_steam_receivers.h  lib_power_electronics_old.h  ngcc_powerblock.cpp  ngcc_powerblock.h  sam_dsg_controller_type265.cpp  sam_iscc_parasitics.cpp  (+20 more)
doc/: ssc_guide.tex
lpsolve/: CMakeLists.txt  colamd.cpp  commonlib.cpp  commonlib.h  fortify.cpp  ini.cpp  lp_Hash.cpp  lp_LUSOL.cpp  lp_MDO.cpp  lp_MPS.cpp  lp_SOS.cpp  lp_crash.cpp  lp_lib.cpp  lp_matrix.cpp  lp_mipbb.cpp  lp_params.cpp  lp_presolve.cpp  lp_price.cpp  lp_pricePSE.cpp  lp_report.cpp  lp_rlp.cpp  lp_scale.cpp  lp_simplex.cpp  lp_solve.cpp  lp_utils.cpp  lp_wlp.cpp  lusol.cpp  mmio.cpp  myblas.cpp  myblas.h  yacc_read.cpp
nlopt/: DIRect.cpp  DIRserial.cpp  DIRsubrout.cpp  auglag.cpp  bobyqa.cpp  ccsa_quadratic.cpp  cdirect.cpp  cobyla.cpp  crs.cpp  deprecated.cpp  direct_wrap.cpp  esch.cpp  general.cpp  hybrid.cpp  isres.cpp  mlsl.cpp  mma.cpp  mssubs.cpp  mt19937ar.cpp  newuoa.cpp  nldrmd.cpp  optimize.cpp  options.cpp  plip.cpp  plis.cpp  pnet.cpp  praxis.cpp  pssubs.cpp  qsort_r.cpp  redblack.cpp  rescale.cpp  sbplx.cpp  slsqp.cpp  sobolseq.cpp  stop.cpp
nlopt/sys/: time.cpp
sdktool/: CMakeLists.txt  dataview.cpp  dataview.h  dllinvoke.cpp  dllinvoke.h  editvariable.cpp  editvariable.h  scripting.cpp  scripting.h  sscdev.cpp  sscdev.h
shared/: 6par_gamma.h  6par_jacobian.h  6par_lu.h  6par_newton.h  6par_search.h  6par_solve.h  CMakeLists - Copy.txt  CMakeLists.txt  lib_aoi.h  lib_battery.cpp  lib_battery.h  lib_battery_capacity.cpp  lib_battery_capacity.h  lib_battery_dispatch.cpp  lib_battery_dispatch.h  lib_battery_dispatch_automatic_btm.cpp  lib_battery_dispatch_automatic_btm.h  lib_battery_dispatch_automatic_fom.cpp  lib_battery_dispatch_automatic_fom.h  lib_battery_dispatch_manual.cpp  lib_battery_dispatch_manual.h  lib_battery_dispatch_pvsmoothing_fom.cpp  lib_battery_dispatch_pvsmoothing_fom.h  lib_battery_lifetime.cpp  lib_battery_lifetime.h  lib_battery_lifetime_calendar_cycle.cpp  lib_battery_lifetime_calendar_cycle.h  lib_battery_lifetime_lmolto.cpp  lib_battery_lifetime_lmolto.h  lib_battery_lifetime_nmc.cpp  lib_battery_lifetime_nmc.h  lib_battery_powerflow.cpp  lib_battery_powerflow.h  lib_battery_voltage.cpp  lib_battery_voltage.h  lib_cec6par.cpp  lib_cec6par.h  lib_financial.cpp  lib_financial.h  lib_fuel_cell.cpp  (+66 more)
solarpilot/: API_structures.cpp  API_structures.h  Ambient.cpp  Ambient.h  AutoPilot_API.cpp  AutoPilot_API.h  CMakeLists.txt  Financial.cpp  Financial.h  Flux.cpp  Flux.h  Heliostat.cpp  Heliostat.h  IOUtil.cpp  IOUtil.h  Land.cpp  Land.h  LayoutSimulateThread.cpp  LayoutSimulateThread.h  OpticalMesh.cpp  OpticalMesh.h  Receiver.cpp  Receiver.h  STObject.cpp  STObject.h  STSimulateThread.cpp  STSimulateThread.h  SolarField.cpp  SolarField.h  Toolbox.cpp  Toolbox.h  definitions.cpp  definitions.h  exceptions.hpp  fluxsim.cpp  fluxsim.h  heliodata.cpp  heliodata.h  interop.cpp  interop.h  (+9 more)
splinter/: CMakeLists.txt
ssc/: CMakeLists.txt  cmod_6parsolve.cpp  cmod_analysisperiodchange_eqns.cpp  cmod_analysisperiodchange_eqns.h  cmod_battery.cpp  cmod_battery.h  cmod_battery_eqns.cpp  cmod_battery_eqns.h  cmod_battery_stateful.cpp  cmod_battery_stateful.h  cmod_battwatts.cpp  cmod_battwatts.h  cmod_belpe.cpp  cmod_biomass.cpp  cmod_cashloan.cpp  cmod_cashloan_heat.cpp  cmod_cb_construction_financing.cpp  cmod_cb_construction_financing.h  cmod_cb_empirical_hce_heat_loss.cpp  cmod_communitysolar.cpp  cmod_csp_dsg_lf_ui.cpp  cmod_csp_heatsink.cpp  cmod_csp_subcomponent.cpp  cmod_csp_tower_particle.cpp  cmod_csp_tower_particle_IPH.cpp  cmod_custom_generation.cpp  cmod_equpartflip.cpp  cmod_etes_electric_resistance.cpp  cmod_etes_ptes.cpp  cmod_financial_eqns.cpp  cmod_financial_eqns.h  cmod_fresnel_physical.cpp  cmod_fresnel_physical_iph.cpp  cmod_fuelcell.cpp  cmod_fuelcell.h  cmod_generic_system-builder.cpp  cmod_generic_system-builder.h  cmod_generic_system.cpp  cmod_geothermal.cpp  cmod_geothermal.h  (+108 more)
tcs/: CMakeLists.txt  CO2_properties.cpp  CO2_properties.h  base_dispatch.cpp  base_dispatch.h  base_dispatch_lpsolve.cpp  base_dispatch_lpsolve.h  base_dispatch_ortools.cpp  base_dispatch_ortools.h  cavity_calcs.cpp  cavity_calcs.h  co2_compressor_library.cpp  co2_compressor_library.h  csp_dispatch.cpp  csp_dispatch.h  csp_dispatch_ortools.cpp  csp_dispatch_ortools.h  csp_radiator.cpp  csp_radiator.h  csp_solver_battery.cpp  csp_solver_battery.h  csp_solver_cavity_receiver.cpp  csp_solver_cavity_receiver.h  csp_solver_core.cpp  csp_solver_core.h  csp_solver_cr_electric_resistance.cpp  csp_solver_cr_electric_resistance.h  csp_solver_cr_heat_pump.cpp  csp_solver_cr_heat_pump.h  csp_solver_cr_reactor.cpp  csp_solver_cr_reactor.h  csp_solver_falling_particle_collector_receiver.cpp  csp_solver_falling_particle_collector_receiver.h  csp_solver_falling_particle_receiver.cpp  csp_solver_falling_particle_receiver.h  csp_solver_fresnel_collector_receiver.h  csp_solver_gen_collector_receiver.cpp  csp_solver_gen_collector_receiver.h  csp_solver_lf_dsg_collector_receiver.cpp  csp_solver_lf_dsg_collector_receiver.h  (+109 more)
test/: CMakeLists.txt  main.cpp
(+248 files in other folders)
